@@ -426,23 +426,24 @@ sp_file_export_dialog (void *widget)
 #include <display/nr-arena.h>
 
 struct SPEBP {
-	int width, height;
+	int width, height, sheight;
 	unsigned char r, g, b, a;
 	NRArenaItem *root;
-	NRPixBlock pb;
+	unsigned char *px;
 };
 
 static int
 sp_export_get_rows (const unsigned char **rows, int row, int num_rows, void *data)
 {
 	struct SPEBP *ebp;
+	NRPixBlock pb;
 	NRRectL bbox;
 	NRGC gc;
 	int r, c;
 
 	ebp = (struct SPEBP *) data;
 
-	num_rows = MIN (num_rows, 64);
+	num_rows = MIN (num_rows, ebp->sheight);
 	num_rows = MIN (num_rows, ebp->height - row);
 
 	g_print ("Rendering %d + %d rows\n", row, num_rows);
@@ -456,9 +457,11 @@ sp_export_get_rows (const unsigned char **rows, int row, int num_rows, void *dat
 	nr_matrix_d_set_identity (&gc.transform);
 	nr_arena_item_invoke_update (ebp->root, &bbox, &gc, NR_ARENA_ITEM_STATE_ALL, NR_ARENA_ITEM_STATE_NONE);
 
+	nr_pixblock_setup_extern (&pb, NR_PIXBLOCK_MODE_R8G8B8A8N, bbox.x0, bbox.y0, bbox.x1, bbox.y1, ebp->px, 4 * ebp->width, TRUE, FALSE);
+
 	for (r = 0; r < num_rows; r++) {
 		unsigned char *p;
-		p = NR_PIXBLOCK_PX (&ebp->pb) + r * ebp->pb.rs;
+		p = NR_PIXBLOCK_PX (&pb) + r * pb.rs;
 		for (c = 0; c < ebp->width; c++) {
 			*p++ = ebp->r;
 			*p++ = ebp->g;
@@ -467,20 +470,19 @@ sp_export_get_rows (const unsigned char **rows, int row, int num_rows, void *dat
 		}
 	}
 
-	ebp->pb.area.x0 = bbox.x0;
-	ebp->pb.area.y0 = bbox.y0;
-	ebp->pb.area.x1 = bbox.x1;
-	ebp->pb.area.y1 = bbox.y1;
-
 	/* Render */
-	nr_arena_item_invoke_render (ebp->root, &bbox, &ebp->pb, 0);
+	nr_arena_item_invoke_render (ebp->root, &bbox, &pb, 0);
 
 	for (r = 0; r < num_rows; r++) {
-		rows[r] = NR_PIXBLOCK_PX (&ebp->pb) + r * ebp->pb.rs;
+		rows[r] = NR_PIXBLOCK_PX (&pb) + r * pb.rs;
 	}
+
+	nr_pixblock_release (&pb);
 
 	return num_rows;
 }
+
+
 
 void
 sp_export_png_file (SPDocument *doc, const unsigned char *filename,
@@ -538,22 +540,25 @@ sp_export_png_file (SPDocument *doc, const unsigned char *filename,
 	ebp.b = NR_RGBA32_B (bgcolor);
 	ebp.a = NR_RGBA32_A (bgcolor);
 
-	/* Get RGBA buffer */
-	nr_pixblock_setup_fast (&ebp.pb, NR_PIXBLOCK_MODE_R8G8B8A8N, 0, 0, 64, 64, FALSE);
-
 	/* Create new arena */
 	arena = g_object_new (NR_TYPE_ARENA, NULL);
 	/* Create ArenaItem and set transform */
 	ebp.root = sp_item_show (SP_ITEM (sp_document_root (doc)), arena);
 	nr_arena_item_set_transform (ebp.root, &affine);
 
-
-	sp_png_write_rgba_striped (filename, width, height, sp_export_get_rows, &ebp);
+	if ((width < 256) || ((width * height) < 32768)) {
+		ebp.px = nr_pixelstore_64K_new (FALSE, 0);
+		ebp.sheight = 65536 / (4 * width);
+		sp_png_write_rgba_striped (filename, width, height, sp_export_get_rows, &ebp);
+		nr_pixelstore_64K_free (ebp.px);
+	} else {
+		ebp.px = nr_new (unsigned char, 4 * 64 * width);
+		ebp.sheight = 64;
+		sp_png_write_rgba_striped (filename, width, height, sp_export_get_rows, &ebp);
+		nr_free (ebp.px);
+	}
 
 	/* Free Arena and ArenaItem */
 	sp_item_hide (SP_ITEM (sp_document_root (doc)), arena);
 	g_object_unref (G_OBJECT (arena));
-
-	nr_pixblock_release (&ebp.pb);
 }
-
