@@ -19,6 +19,8 @@
 
 #include "nr-type-w32.h"
 
+#define NR_SLOTS_BLOCK 32
+
 static NRTypeFace *nr_typeface_w32_new (NRTypeFaceDef *def);
 void nr_typeface_w32_free (NRTypeFace *tf);
 
@@ -70,6 +72,8 @@ static NRNameList NRW32Typefaces = {0, NULL, NULL};
 static NRNameList NRW32Families = {0, NULL, NULL};
 
 static void nr_type_w32_init (void);
+static NRTypeFaceGlyphW32 *nr_typeface_w32_ensure_slot (NRTypeFaceW32 *tfw32, unsigned int glyph);
+static NRBPath *nr_typeface_w32_ensure_outline (NRTypeFaceW32 *tfw32, NRTypeFaceGlyphW32 *slot, unsigned int glyph, unsigned int metrics);
 
 void
 nr_type_w32_typefaces_get (NRNameList *names)
@@ -100,8 +104,6 @@ static NRTypeFace *
 nr_typeface_w32_new (NRTypeFaceDef *def)
 { 
     NRTypeFaceW32 *tfw32;
-    LOGFONT *lf;
-    TEXTMETRIC tm;
     unsigned int otmsize;
 
     tfw32 = nr_new (NRTypeFaceW32, 1);
@@ -112,20 +114,24 @@ nr_typeface_w32_new (NRTypeFaceDef *def)
 
 	tfw32->fonts = NULL;
 
-	lf = g_hash_table_lookup (namedict, def->name);
-	lf->lfHeight = 1000;
-	lf->lfWidth = 1000;
-	tfw32->hfont = CreateFontIndirect (lf);
+	tfw32->logfont = g_hash_table_lookup (namedict, def->name);
+	tfw32->logfont->lfHeight = 1000;
+	tfw32->logfont->lfWidth = 0;
+	tfw32->hfont = CreateFontIndirect (tfw32->logfont);
 
 	/* Have to select font to get metrics etc. */
 	SelectFont (hdc, tfw32->hfont);
 
-	GetTextMetrics (hdc, &tm);
-	tfw32->typeface.nglyphs = tm.tmLastChar - tm.tmFirstChar + 1;
-
 	otmsize = GetOutlineTextMetrics (hdc, 0, NULL);
 	tfw32->otm = (LPOUTLINETEXTMETRIC) nr_new (unsigned char, otmsize);
 	GetOutlineTextMetrics (hdc, otmsize, tfw32->otm);
+
+	tfw32->typeface.nglyphs = tfw32->otm->otmTextMetrics.tmLastChar - tfw32->otm->otmTextMetrics.tmFirstChar + 1;
+
+	tfw32->gidx = NULL;
+	tfw32->slots = NULL;
+	tfw32->slots_length = 0;
+	tfw32->slots_size = 0;
 
 	return (NRTypeFace *) tfw32;
 }
@@ -138,8 +144,20 @@ nr_typeface_w32_free (NRTypeFace *tf)
     tfw32 = (NRTypeFaceW32 *) tf;
 
     nr_free (tfw32->otm);
-
     DeleteFont (tfw32->hfont);
+
+    if (tfw32->slots) {
+        int i;
+        for (i = 0; i < tfw32->slots_length; i++) {
+            if (tfw32->slots[i].outline.path > 0) {
+				nr_free (tfw32->slots[i].outline.path);
+            }
+        }
+		nr_free (tfw32->slots);
+    }
+    if (tfw32->gidx) nr_free (tfw32->gidx);
+
+    nr_free (tf);
 }
 
 
@@ -181,56 +199,64 @@ NRBPath *
 nr_typeface_w32_glyph_outline_get (NRTypeFace *tf, unsigned int glyph, unsigned int metrics, NRBPath *d, unsigned int ref)
 {
 	NRTypeFaceW32 *tfw32;
-	MAT2 mat = {{0, 1}, {0, 0}, {0, 0}, {0, 1}};
-	GLYPHMETRICS gmetrics;
-	int golsize;
-	void *gol;
-	LPTTPOLYGONHEADER pgh;
-	LPTTPOLYCURVE pc;
+	NRTypeFaceGlyphW32 *slot;
 
 	tfw32 = (NRTypeFaceW32 *) tf;
 
-	/* Have to select font */
-	SelectFont (hdc, tfw32->hfont);
+	slot = nr_typeface_w32_ensure_slot (tfw32, glyph);
 
-    golsize = GetGlyphOutline (hdc, glyph, GGO_NATIVE, &gmetrics, 0, NULL, &mat);
-    gol = nr_new (unsigned char, golsize);
-    GetGlyphOutline (hdc, glyph, GGO_NATIVE, &gmetrics, golsize, gol, &mat);
+	if (slot) {
+		nr_typeface_w32_ensure_outline (tfw32, slot, glyph, metrics);
+		if (slot->olref >= 0) {
+			if (ref) {
+				slot->olref += 1;
+			} else {
+				slot->olref = -1;
+			}
+		}
+		*d = slot->outline;
+	} else {
+		d->path = NULL;
+	}
 
-    pgh = (LPTTPOLYGONHEADER) gol;
-    g_print ("Polygon header %d bytes, start %g %g\n", pgh->cb, (double) pgh->pfxStart.x.value, (double) pgh->pfxStart.y.value);
-    pc = (LPPOLYCURVE) (gol + sizeof (TTPOLYGONHEADER));
-
-    nr_free (gol);
-
-    return NULL;
+	return d;
 }
 
 void
 nr_typeface_w32_glyph_outline_unref (NRTypeFace *tf, unsigned int glyph, unsigned int metrics)
 {
+	NRTypeFaceW32 *tfw32;
+	NRTypeFaceGlyphW32 *slot;
+
+	tfw32 = (NRTypeFaceW32 *) tf;
+
+	slot = nr_typeface_w32_ensure_slot (tfw32, glyph);
+
+	if (slot && slot->olref > 0) {
+		slot->olref -= 1;
+		if (slot->olref < 1) {
+			nr_free (slot->outline.path);
+			slot->outline.path = NULL;
+		}
+	}
 }
 
 NRPointF *
 nr_typeface_w32_glyph_advance_get (NRTypeFace *tf, unsigned int glyph, unsigned int metrics, NRPointF *adv)
 {
 	NRTypeFaceW32 *tfw32;
-	MAT2 mat = {{0, 1}, {0, 0}, {0, 0}, {0, 1}};
-	GLYPHMETRICS gmetrics;
+	NRTypeFaceGlyphW32 *slot;
 
 	tfw32 = (NRTypeFaceW32 *) tf;
 
-	/* Have to select font */
-	SelectFont (hdc, tfw32->hfont);
+	slot = nr_typeface_w32_ensure_slot (tfw32, glyph);
 
-    GetGlyphOutline (hdc, glyph, GGO_METRICS, &gmetrics, 0, NULL, &mat);
-
-    /* fixme: Scales */
-    adv->x = gmetrics.gmCellIncX;
-    adv->y = gmetrics.gmCellIncY;
-    g_print ("Advance %g %g\n", adv->x, adv->y);
-
+	if (slot) {
+		*adv = slot->advance;
     return adv;
+	}
+
+	return NULL;
 }
 
 unsigned int
@@ -240,7 +266,10 @@ nr_typeface_w32_lookup (NRTypeFace *tf, unsigned int rule, unsigned int unival)
 
 	tfw32 = (NRTypeFaceW32 *) tf;
 
-    return unival & 127;
+	unival = CLAMP (unival, 0, tf->nglyphs);
+
+	/* fixme: Use real lookup tables etc. */
+    return unival - tfw32->otm->otmTextMetrics.tmFirstChar;
 }
 
 
@@ -374,5 +403,147 @@ nr_type_w32_init (void)
     w32i = TRUE;
 }
 
+static NRTypeFaceGlyphW32 *
+nr_typeface_w32_ensure_slot (NRTypeFaceW32 *tfw32, unsigned int glyph)
+{
+	if (!tfw32->gidx) {
+		int i;
+		tfw32->gidx = nr_new (int, tfw32->typeface.nglyphs);
+		for (i = 0; i < tfw32->typeface.nglyphs; i++) {
+			tfw32->gidx[i] = -1;
+		}
+	}
 
+	if (tfw32->gidx[glyph] < 0) {
+		NRTypeFaceGlyphW32 *slot;
+		static MAT2 mat = {{0, 1}, {0, 0}, {0, 0}, {0, 1}};
+		GLYPHMETRICS gmetrics;
+
+		if (!tfw32->slots) {
+			tfw32->slots = nr_new (NRTypeFaceGlyphW32, 8);
+			tfw32->slots_size = 8;
+		} else if (tfw32->slots_length >= tfw32->slots_size) {
+			tfw32->slots_size += NR_SLOTS_BLOCK;
+			tfw32->slots = nr_renew (tfw32->slots, NRTypeFaceGlyphW32, tfw32->slots_size);
+		}
+
+		slot = tfw32->slots + tfw32->slots_length;
+
+		/* Have to select font */
+		SelectFont (hdc, tfw32->hfont);
+		GetGlyphOutline (hdc, glyph + tfw32->otm->otmTextMetrics.tmFirstChar, GGO_METRICS, &gmetrics, 0, NULL, &mat);
+		slot->area.x0 = gmetrics.gmptGlyphOrigin.x;
+		slot->area.y1 = gmetrics.gmptGlyphOrigin.y;
+		slot->area.x1 = slot->area.x0 + gmetrics.gmBlackBoxX;
+		slot->area.y0 = slot->area.y1 - gmetrics.gmBlackBoxY;
+		slot->advance.x = gmetrics.gmCellIncX;
+        slot->advance.y = gmetrics.gmCellIncY;
+
+		slot->olref = 0;
+		slot->outline.path = NULL;
+
+		tfw32->gidx[glyph] = tfw32->slots_length;
+		tfw32->slots_length += 1;
+	}
+
+	return tfw32->slots + tfw32->gidx[glyph];
+}
+
+#define FIXED_TO_FLOAT(p) ((p)->value + (double) (p)->fract / 65536.0)
+
+static NRBPath *
+nr_typeface_w32_ensure_outline (NRTypeFaceW32 *tfw32, NRTypeFaceGlyphW32 *slot, unsigned int glyph, unsigned int metrics)
+{
+	MAT2 mat = {{0, 1}, {0, 0}, {0, 0}, {0, 1}};
+	GLYPHMETRICS gmetrics;
+	int golsize;
+	unsigned char *gol;
+	LPTTPOLYGONHEADER pgh;
+    LPTTPOLYCURVE pc;
+	ArtBpath bpath[8192];
+    ArtBpath *bp;
+	int pos, stop;
+    double Ax, Ay, Bx, By, Cx, Cy;
+
+	/* Have to select font */
+	SelectFont (hdc, tfw32->hfont);
+
+    golsize = GetGlyphOutline (hdc, glyph + tfw32->otm->otmTextMetrics.tmFirstChar, GGO_NATIVE, &gmetrics, 0, NULL, &mat);
+    gol = nr_new (unsigned char, golsize);
+    GetGlyphOutline (hdc, glyph + tfw32->otm->otmTextMetrics.tmFirstChar, GGO_NATIVE, &gmetrics, golsize, gol, &mat);
+
+    bp = bpath;
+    pos = 0;
+    while (pos < golsize) {
+        double Sx, Sy;
+        pgh = (LPTTPOLYGONHEADER) (gol + pos);
+        stop = pos + pgh->cb;
+        /* Initialize current position */
+        Ax = FIXED_TO_FLOAT (&pgh->pfxStart.x);
+        Ay = FIXED_TO_FLOAT (&pgh->pfxStart.y);
+        /* Always starts with moveto */
+        bp->code = ART_MOVETO;
+        bp->x3 = Ax;
+        bp->y3 = Ay;
+        bp += 1;
+        Sx = Ax;
+        Sy = Ay;
+        pos = pos + sizeof (TTPOLYGONHEADER);
+        while (pos < stop) {
+            pc = (LPTTPOLYCURVE) (gol + pos);
+            if (pc->wType == TT_PRIM_LINE) {
+                int i;
+                for (i = 0; i < pc->cpfx; i++) {
+                    Cx = FIXED_TO_FLOAT (&pc->apfx[i].x);
+                    Cy = FIXED_TO_FLOAT (&pc->apfx[i].y);
+                    bp->code = ART_LINETO;
+                    bp->x3 = Cx;
+                    bp->y3 = Cy;
+                    bp += 1;
+                    Ax = Cx;
+                    Ay = Cy;
+                }
+            } else if (pc->wType == TT_PRIM_QSPLINE) {
+                int i;
+                for (i = 0; i < (pc->cpfx - 1); i++) {
+                    Bx = FIXED_TO_FLOAT (&pc->apfx[i].x);
+                    By = FIXED_TO_FLOAT (&pc->apfx[i].y);
+                    if (i < (pc->cpfx - 2)) {
+                        Cx = (Bx + FIXED_TO_FLOAT (&pc->apfx[i + 1].x)) / 2;
+                        Cy = (By + FIXED_TO_FLOAT (&pc->apfx[i + 1].y)) / 2;
+                    } else {
+                        Cx = FIXED_TO_FLOAT (&pc->apfx[i + 1].x);
+                        Cy = FIXED_TO_FLOAT (&pc->apfx[i + 1].y);
+                    }
+                    bp->code = ART_CURVETO;
+                    bp->x1 = Bx - (Bx - Ax) / 3;
+                    bp->y1 = By - (By - Ay) / 3;
+                    bp->x2 = Bx + (Cx - Bx) / 3;
+                    bp->y2 = By + (Cy - By) / 3;
+                    bp->x3 = Cx;
+                    bp->y3 = Cy;
+                    bp += 1;
+                    Ax = Cx;
+                    Ay = Cy;
+                }
+            }
+            pos += sizeof (TTPOLYCURVE) + (pc->cpfx - 1) * sizeof (POINTFX);
+        }
+        if ((Cx != Sx) || (Cy != Sy)) {
+            bp->code = ART_LINETO;
+            bp->x3 = Sx;
+            bp->y3 = Sy;
+            bp += 1;
+        }
+    }
+
+    bp->code = ART_END;
+
+    slot->outline.path = nr_new (ArtBpath, bp - bpath + 1);
+    memcpy (slot->outline.path, bpath, (bp - bpath + 1) * sizeof (ArtBpath));
+
+    nr_free (gol);
+
+    return &slot->outline;
+}
 
